main-subsection: fixed CSS bug: when attribute foldable is "false", content should always be visible, even when attribute expanded is "false"

--- a/ktbs4la2-components/ktbs4la2-main-subsection/ktbs4la2-main-subsection.css
+++ b/ktbs4la2-components/ktbs4la2-main-subsection/ktbs4la2-main-subsection.css
@@ -55,6 +55,6 @@
 	background: url('{my-component-folder}/chevron-up.svg') no-repeat;
 }
 
-:host([expanded = "false"]) #content {
+:host([expanded = "false"]:not([foldable = "false"])) #content {
 	display: none;
 }
